sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: illegal start of simple expression
   	while (place>=1 && getValeur(place)>valeur))){
                                                   ^